--- a/index.html
+++ b/index.html
@@ -7,26 +7,24 @@
   <meta name="description" content="Psicoterapia humanista-existencial. Espaço de escuta, acolhimento e reflexão. Agende sua sessão com Laura Sathler, CRP 04/30866.">
   <style>
     :root{
-      /* ---- Paleta ---- */
-      --brand:#146B6D;   /* verde petróleo - fundo */
-      --brand-2:#0E5658; /* variante mais escura p/ rodapé */
-      --card:#F6F5F0;    /* off-white quente - quadros */
-      --text:#3E3E3E;    /* cinza escuro quente - texto nos quadros */
-      --gold:#C6A56B;    /* dourado suave - botões/títulos */
-      --mint:#B5E0DC;    /* verde-claro menta - hover/realces */
-      --white:#ffffff;
+      /* Paleta solicitada */
+      --brand:#146B6D;    /* fundo da página */
+      --brand-2:#0E5658;  /* variante p/ rodapé */
+      --card:#F6F5F0;     /* quadros/caixas */
+      --text:#3E3E3E;     /* texto dentro dos quadros */
+      --gold:#C6A56B;     /* botões/títulos */
+      --mint:#B5E0DC;     /* hover/links */
 
       --radius:12px;
       --shadow:0 2px 8px rgba(0,0,0,.10);
       --maxw:1080px;
       --s4:24px; --s6:48px;
-
       --anchor-offset:120px;
-      --header-pad:.7rem; /* ligeiramente menor para reduzir o topo */
+      --header-pad:.7rem;
 
-      /* tamanhos da logomarca (topo e rodapé idênticos) */
-      --logo-h-desktop:180px;  /* ↑ aumentei */
-      --logo-h-mobile:130px;   /* ↑ aumentei */
+      /* logo maior (topo e rodapé) */
+      --logo-h-desktop:180px;
+      --logo-h-mobile:130px;
       --logo-scale-scrolled:.9;
     }
 
@@ -38,37 +36,31 @@
       font-family:system-ui,-apple-system,"Segoe UI",Roboto,Arial,sans-serif;
       line-height:1.6;
     }
+
+    h1,h2,h3{color:var(--gold); font-weight:600; line-height:1.2; margin:0 0 .75rem}
     a{color:var(--mint); text-decoration:none}
     a:hover{opacity:.9}
-
-    h1,h2,h3{color:var(--gold); font-weight:600; line-height:1.2; margin:0 0 0.75rem}
-
     .container{width:min(var(--maxw),92vw); margin-inline:auto}
 
     /* ===== Header ===== */
     header{
       position:sticky; top:0; z-index:30;
       background:color-mix(in srgb, var(--brand) 96%, #000 0%);
-      color:var(--white);
-      border-bottom:1px solid rgba(255,255,255,.15);
+      color:#fff; border-bottom:1px solid rgba(255,255,255,.15);
       backdrop-filter:saturate(150%) blur(6px);
-      transition: box-shadow .2s ease, background-color .2s ease;
+      transition: box-shadow .2s ease;
     }
     .nav{
-      display:grid;
-      grid-template-columns:1fr auto;
+      display:grid; grid-template-columns:1fr auto;
       grid-template-areas:
         "title title"
         "menu  logo"
         "nav   nav";
-      row-gap:.4rem; /* ↓ menos espaço vertical entre linhas do topo */
-      align-items:center;
-      padding:var(--header-pad) 0;
+      row-gap:.4rem; align-items:center; padding:var(--header-pad) 0;
     }
     .brand-info{
-      grid-area:title; text-align:center; color:var(--white);
-      display:flex; flex-direction:column; gap:.05rem; /* ↓ diminui o espaço entre as linhas */
-      line-height:1.15;                                  /* ↓ linha mais “compacta” */
+      grid-area:title; text-align:center; color:#fff;
+      display:flex; flex-direction:column; gap:.05rem; line-height:1.15;
     }
     .brand-info b{font-weight:800; letter-spacing:.2px; font-size:clamp(1.05rem,2vw,1.35rem)}
     .brand-info small{opacity:.95; font-size:clamp(.9rem,1.6vw,1rem)}
@@ -77,65 +69,52 @@
     .menu-btn{
       grid-area:menu; justify-self:center;
       display:inline-flex; align-items:center; gap:.5rem;
-      background-color:var(--gold); color:var(--card);
-      border:none; border-radius:8px; padding:10px 20px; font-weight:700; cursor:pointer;
-      transition:.3s;
+      background:var(--gold); color:var(--card); border:none; border-radius:8px;
+      padding:10px 20px; font-weight:700; cursor:pointer; transition:.3s;
     }
-    .menu-btn:hover{background-color:var(--mint); color:var(--brand)}
+    .menu-btn:hover{background:var(--mint); color:var(--brand)}
 
     .logo-wrap{grid-area:logo; justify-self:end}
     .brand-logo{
       height:var(--logo-h-desktop); width:auto; display:block;
-      transform-origin:right center; transition: transform .2s ease;
-      filter: drop-shadow(0 4px 12px rgba(0,0,0,.15));
+      transform-origin:right center; transition:transform .2s ease;
+      filter:drop-shadow(0 4px 12px rgba(0,0,0,.15));
     }
     header.scrolled{box-shadow:0 8px 24px rgba(0,0,0,.25)}
     header.scrolled .brand-logo{transform:scale(var(--logo-scale-scrolled))}
 
     nav{grid-area:nav; justify-self:center; width:100%}
-    nav ul{
-      display:flex; justify-content:center; flex-wrap:wrap; gap:12px;
-      list-style:none; margin:0; padding:6px 0; /* ↓ um pouco menos alto */
-    }
-    nav a{
-      color:var(--white); font-weight:600; padding:.4rem .6rem; border-radius:10px; position:relative;
-    }
+    nav ul{display:flex; justify-content:center; flex-wrap:wrap; gap:12px; list-style:none; margin:0; padding:6px 0}
+    nav a{color:#fff; font-weight:600; padding:.4rem .6rem; border-radius:10px; position:relative}
     nav a::after{
       content:""; position:absolute; left:.6rem; right:.6rem; bottom:.15rem; height:2px;
       background:var(--gold); transform:scaleX(0); transform-origin:left; transition:transform .18s ease; border-radius:2px;
     }
     nav a:hover::after{transform:scaleX(1)}
 
-    /* ===== Quadros de texto ===== */
+    /* ===== Seções/quadros ===== */
     .section{padding:var(--s6) 0; scroll-margin-top:var(--anchor-offset)}
     .section-box{
-      background-color:var(--card);
-      border-radius:var(--radius);
-      padding:var(--s4);
-      box-shadow:var(--shadow);
-      color:var(--text);
+      background:var(--card); border-radius:var(--radius); padding:var(--s4);
+      box-shadow:var(--shadow); color:var(--text);
     }
-
     .grid-2{display:grid; grid-template-columns:1fr 1fr; gap:var(--s4); align-items:stretch}
     .grid-3{display:grid; grid-template-columns:repeat(3,1fr); gap:var(--s4)}
 
-    /* ===== FOTO GRANDE, PREENCHENDO O QUADRO ===== */
-    .photo-box{padding:0; overflow:hidden}          /* sem padding para colar a imagem nas bordas */
-    .photo-fill{
-      width:100%; height:100%; min-height:360px;    /* altura mínima agradável */
-      display:block; object-fit:cover;              /* cobre todo o quadro */
-      border-radius:var(--radius);                  /* cantos iguais ao quadro */
-    }
+    /* Foto grande preenchendo o quadro (sem borda redonda) */
+    .photo-box{padding:0; overflow:hidden}
+    .photo-fill{width:100%; height:100%; min-height:360px; object-fit:cover; display:block; border-radius:var(--radius)}
 
     .img-cover{width:100%; height:auto; border-radius:var(--radius); box-shadow:var(--shadow)}
 
-    /* ===== Botões (dourado) ===== */
+    /* Botões */
     .btn{
-      display:inline-block; background-color:var(--gold); color:var(--card);
-      border:none; border-radius:8px; padding:10px 20px; font-weight:700; transition:.3s;
-      text-decoration:none; min-width:180px; text-align:center;
+      display:inline-block; background:var(--gold); color:var(--card);
+      border:none; border-radius:8px; padding:10px 20px; font-weight:700;
+      min-width:180px; text-align:center; transition:.3s;
+      text-decoration:none;
     }
-    .btn:hover{background-color:var(--mint); color:var(--brand)}
+    .btn:hover{background:var(--mint); color:var(--brand)}
     .mini-cta{display:flex; gap:12px; flex-wrap:wrap; margin-top:.75rem; justify-content:center}
 
     /* Ícones sociais */
@@ -143,35 +122,26 @@
     .social a{display:inline-flex; width:52px; height:52px; border-radius:12px; overflow:hidden}
     .social svg{width:52px; height:52px; display:block}
 
-    /* ===== Rodapé ===== */
-    footer{
-      background:var(--brand-2); color:var(--white);
-      border-top:1px solid rgba(255,255,255,.15); padding:2rem 0;
-    }
-    .footer-content{
-      display:grid; grid-template-columns:1fr auto; align-items:center; column-gap:1rem;
-    }
+    /* Rodapé */
+    footer{background:var(--brand-2); color:#fff; border-top:1px solid rgba(255,255,255,.15); padding:2rem 0}
+    .footer-content{display:grid; grid-template-columns:1fr auto; align-items:center; column-gap:1rem}
     .footer-text{text-align:center}
-    .footer-logo{height:var(--logo-h-desktop); width:auto; display:block; filter: drop-shadow(0 4px 12px rgba(0,0,0,.15));}
+    .footer-logo{height:var(--logo-h-desktop); width:auto; display:block; filter:drop-shadow(0 4px 12px rgba(0,0,0,.15))}
 
-    /* ===== Responsivo ===== */
+    /* Responsivo */
     @media (max-width:900px){
       .brand-logo{height:var(--logo-h-mobile)}
       .footer-logo{height:var(--logo-h-mobile)}
 
-      /* abrir/fechar menu sem sobrepor */
       .menu-toggle:not(:checked) ~ nav{display:none}
       .menu-toggle:checked ~ nav{display:block}
 
       .grid-2{grid-template-columns:1fr}
       .grid-3{grid-template-columns:1fr}
-
-      /* foto cheia também no mobile */
       .photo-fill{min-height:280px}
     }
-
-    @media (prefers-reduced-motion: reduce){
-      .brand-logo, nav a::after { transition:none }
+    @media (prefers-reduced-motion:reduce){
+      .brand-logo, nav a::after{transition:none}
     }
   </style>
 </head>
@@ -179,13 +149,11 @@
   <!-- ===== HEADER ===== -->
   <header id="topbar">
     <div class="container nav">
-      <!-- Linha 1: título centralizado (com menos espaçamento) -->
       <div class="brand-info" aria-label="Identidade do site">
         <b>Laura Sathler</b>
         <small>Psicóloga · CRP 04/30866</small>
       </div>
 
-      <!-- Linha 2: botão de menu + logo à direita + navegação central -->
       <input id="menu" class="menu-toggle" type="checkbox" />
       <label for="menu" class="menu-btn" aria-label="Abrir menu">☰ Menu</label>
 
@@ -206,7 +174,7 @@
   </header>
 
   <main>
-    <!-- O que é Psicoterapia? -->
+    <!-- O que é Psicoterapia? (texto ESQ, imagem DIR) -->
     <section id="psicoterapia" class="section">
       <div class="container grid-2">
         <div class="section-box">
@@ -214,25 +182,24 @@
           <p>A psicoterapia é um espaço seguro de escuta e acolhimento, onde você pode falar livremente sobre o que sente e pensa, sem julgamentos ou expectativas impostas. É um processo que convida ao autoconhecimento, ajudando a reconhecer sua história, compreender as próprias dores, cuidar de si e fortalecer o que traz sentido e vitalidade à vida.</p>
           <p>Esse caminho nem sempre é simples; ele exige presença e coragem para olhar para dentro. Mas também é um espaço de encontro, clareza e afeto, que abre possibilidades para escolhas mais conscientes e formas mais autênticas de viver.</p>
         </div>
-        <!-- Foto preenchendo o quadro -->
-        <div class="section-box photo-box">
-          <img class="photo-fill" src="Laura.jpeg" alt="Foto de Laura Sathler" loading="lazy" decoding="async">
+        <div class="section-box">
+          <img class="img-cover" src="Terapeuta-Paciente.png" alt="Terapeuta e paciente em diálogo acolhedor" loading="lazy" decoding="async">
         </div>
       </div>
     </section>
 
-    <!-- Sobre mim -->
+    <!-- Sobre mim (FOTO ESQ grande, TEXTO DIR) -->
     <section id="sobre" class="section">
       <div class="container grid-2">
+        <div class="section-box photo-box">
+          <img class="photo-fill" src="Laura.jpeg" alt="Foto de Laura Sathler" loading="lazy" decoding="async">
+        </div>
         <div class="section-box">
           <h2>Sobre mim</h2>
           <p>Sou <strong>Laura Sathler</strong>, psicóloga (CRP 04/30866), formada pela PUC Minas e com mais de 10 anos de experiência clínica. Minha trajetória é movida pelo desejo de estar com as pessoas em seus processos mais autênticos, oferecendo um espaço seguro e de confiança.</p>
           <p>Minha prática se baseia na abordagem <strong>humanista-existencial</strong>, que acredita na singularidade de cada ser humano e no poder do encontro verdadeiro. No consultório, valorizo o diálogo aberto, a escuta atenta e a presença genuína, porque acredito que é na relação que novas formas de viver e sentir podem florescer.</p>
           <p>A terapia é, para mim, um convite: olhar para dentro, compreender as próprias dores, reconhecer os recursos internos e, pouco a pouco, construir caminhos mais leves, conscientes e significativos.</p>
           <p>Se você busca um espaço de acolhimento e transformação, será uma alegria caminhar junto com você nessa jornada.</p>
-        </div>
-        <div class="section-box">
-          <img class="img-cover" src="Terapeuta-Paciente.png" alt="Terapeuta e paciente em diálogo acolhedor" loading="lazy" decoding="async">
         </div>
       </div>
     </section>
@@ -255,9 +222,7 @@
               <li>Bullying, isolamento e dificuldades de amizade</li>
               <li>Conflitos familiares e busca de identidade</li>
             </ul>
-            <div class="mini-cta">
-              <a class="btn" href="#contato">Quero agendar uma conversa</a>
-            </div>
+            <div class="mini-cta"><a class="btn" href="#contato">Quero agendar uma conversa</a></div>
           </div>
 
           <div class="section-box">
@@ -271,9 +236,7 @@
               <li>Dificuldade em dizer “não” e estabelecer limites</li>
               <li>Desenvolvimento pessoal e busca de propósito</li>
             </ul>
-            <div class="mini-cta">
-              <a class="btn" href="#contato">Marcar minha sessão</a>
-            </div>
+            <div class="mini-cta"><a class="btn" href="#contato">Marcar minha sessão</a></div>
           </div>
 
           <div class="section-box">
@@ -286,9 +249,7 @@
               <li>Sexualidade e intimidade</li>
               <li>Alinhamento de expectativas e planos em comum</li>
             </ul>
-            <div class="mini-cta">
-              <a class="btn" href="#contato">Atendimento para casal</a>
-            </div>
+            <div class="mini-cta"><a class="btn" href="#contato">Atendimento para casal</a></div>
           </div>
         </div>
 
@@ -328,15 +289,12 @@
           <p>Estou à disposição para conversar e iniciar um processo terapêutico com você.</p>
 
           <div class="social" aria-label="Canais de contato">
-            <!-- WhatsApp -->
             <a href="https://wa.me/5531991593800" target="_blank" rel="noopener" aria-label="WhatsApp">
               <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 64 64"><circle cx="32" cy="32" r="32" fill="#25D366"/><path fill="#fff" d="M45.6 18.4A16.5 16.5 0 0 0 16.7 43.9l-1.1 6.9 7-1.1A16.5 16.5 0 0 0 45.6 18.4Zm-6 23.8a13.2 13.2 0 0 1-6.5 1.8h-.1a13 13 0 0 1-5.7-1.4l-.4-.2-4.2.7.7-4.1-.3-.4a13 13 0 1 1 16.5 3.6Z"/></svg>
             </a>
-            <!-- E-mail -->
             <a href="mailto:Laurasathler@yahoo.com.br" aria-label="E-mail">
               <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 64 64"><rect x="4" y="12" width="56" height="40" rx="8" fill="#4f7cff"/><path fill="#fff" d="M10 20l22 14L54 20v6L32 40 10 26z"/></svg>
             </a>
-            <!-- Instagram -->
             <a href="https://www.instagram.com/laurasathler_psi" target="_blank" rel="noopener" aria-label="Instagram">
               <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 64 64">
                 <defs>
@@ -366,16 +324,13 @@
   </footer>
 
   <script>
-    // Ano no rodapé
     document.getElementById('year').textContent = new Date().getFullYear();
 
-    // sombra sutil no header sem alterar altura (evita “tremor”)
     const header = document.getElementById('topbar');
     function onScroll(){ header.classList.toggle('scrolled', window.scrollY > 10); }
     window.addEventListener('scroll', onScroll, {passive:true});
     window.addEventListener('load', onScroll);
 
-    // offset das âncoras = altura real do header
     function setOffset(){
       const h = header.offsetHeight;
       document.documentElement.style.setProperty('--anchor-offset', h + 'px');
@@ -383,7 +338,6 @@
     window.addEventListener('load', setOffset);
     window.addEventListener('resize', setOffset);
 
-    // fecha o menu após clicar em uma âncora no mobile
     document.querySelectorAll('nav a').forEach(a=>{
       a.addEventListener('click',()=>{
         const cb=document.getElementById('menu');
