--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
   <style>
     :root{
       /* Paleta solicitada */
-      --brand:#146B6D;    /* fundo da página */
-      --brand-2:#0E5658;  /* variante p/ rodapé */
-      --card:#F6F5F0;     /* quadros/caixas */
-      --text:#3E3E3E;     /* texto dentro dos quadros */
-      --gold:#C6A56B;     /* botões/títulos */
-      --mint:#B5E0DC;     /* hover/links */
+      --brand:#146B6D;    /* fundo da página (verde petróleo) */
+      --brand-2:#104e50;  /* variante p/ rodapé */
+      --card:#F6F5F0;     /* quadros/caixas off-white */
+      --text:#3E3E3E;     /* texto nos quadros */
+      --gold:#C6A56B;     /* botões, títulos */
+      --mint:#B5E0DC;     /* hover/links e detalhes */
 
       --radius:12px;
       --shadow:0 2px 8px rgba(0,0,0,.10);
@@ -37,12 +37,13 @@
       line-height:1.6;
     }
 
+    /* Tipografia / cores gerais */
     h1,h2,h3{color:var(--gold); font-weight:600; line-height:1.2; margin:0 0 .75rem}
-    a{color:var(--mint); text-decoration:none}
+    a{color:var(--mint); text-decoration:none; transition:.3s}
     a:hover{opacity:.9}
     .container{width:min(var(--maxw),92vw); margin-inline:auto}
 
-    /* ===== Header ===== */
+    /* ===== HEADER ===== */
     header{
       position:sticky; top:0; z-index:30;
       background:color-mix(in srgb, var(--brand) 96%, #000 0%);
@@ -50,29 +51,35 @@
       backdrop-filter:saturate(150%) blur(6px);
       transition: box-shadow .2s ease;
     }
+    /* Grid do topo: nome/CRP central em cima, menu central embaixo, logo à direita */
     .nav{
-      display:grid; grid-template-columns:1fr auto;
-      grid-template-areas:
-        "title title"
-        "menu  logo"
-        "nav   nav";
-      row-gap:.4rem; align-items:center; padding:var(--header-pad) 0;
+      display:grid; align-items:center; row-gap:.35rem; padding:var(--header-pad) 0;
     }
+    @media (min-width:901px){
+      .nav{
+        grid-template-columns: 1fr auto;    /* [coluna de texto/menu] [logo] */
+        grid-template-areas:
+          "brand logo"
+          "nav   logo";
+      }
+    }
+    @media (max-width:900px){
+      .nav{
+        grid-template-columns: 1fr auto;    /* nome e logo lado a lado */
+        grid-template-areas:
+          "brand logo"
+          "menu  menu"
+          "nav   nav";
+      }
+    }
+
     .brand-info{
-      grid-area:title; text-align:center; color:#fff;
-      display:flex; flex-direction:column; gap:.05rem; line-height:1.15;
+      grid-area:brand; text-align:center; color:#fff;
+      display:flex; flex-direction:column; gap:.02rem; line-height:1.1; /* linhas mais “juntas” */
+      justify-self:center;
     }
     .brand-info b{font-weight:800; letter-spacing:.2px; font-size:clamp(1.05rem,2vw,1.35rem)}
     .brand-info small{opacity:.95; font-size:clamp(.9rem,1.6vw,1rem)}
-
-    .menu-toggle{display:none}
-    .menu-btn{
-      grid-area:menu; justify-self:center;
-      display:inline-flex; align-items:center; gap:.5rem;
-      background:var(--gold); color:var(--card); border:none; border-radius:8px;
-      padding:10px 20px; font-weight:700; cursor:pointer; transition:.3s;
-    }
-    .menu-btn:hover{background:var(--mint); color:var(--brand)}
 
     .logo-wrap{grid-area:logo; justify-self:end}
     .brand-logo{
@@ -83,6 +90,14 @@
     header.scrolled{box-shadow:0 8px 24px rgba(0,0,0,.25)}
     header.scrolled .brand-logo{transform:scale(var(--logo-scale-scrolled))}
 
+    /* Menu */
+    .menu-toggle{display:none}
+    .menu-btn{
+      grid-area:menu; justify-self:center; display:none;
+      background:var(--gold); color:var(--card); border:none; border-radius:8px;
+      padding:10px 20px; font-weight:700; cursor:pointer; transition:.3s;
+    }
+    .menu-btn:hover{background:var(--mint); color:var(--brand)}
     nav{grid-area:nav; justify-self:center; width:100%}
     nav ul{display:flex; justify-content:center; flex-wrap:wrap; gap:12px; list-style:none; margin:0; padding:6px 0}
     nav a{color:#fff; font-weight:600; padding:.4rem .6rem; border-radius:10px; position:relative}
@@ -91,28 +106,33 @@
       background:var(--gold); transform:scaleX(0); transform-origin:left; transition:transform .18s ease; border-radius:2px;
     }
     nav a:hover::after{transform:scaleX(1)}
+    /* Mobile menu em acordeão (não sobrepõe conteúdo) */
+    @media (max-width:900px){
+      .menu-btn{display:inline-flex; align-items:center; gap:.4rem}
+      .menu-toggle:not(:checked) ~ nav{display:none}
+      .menu-toggle:checked ~ nav{display:block}
+    }
 
-    /* ===== Seções/quadros ===== */
+    /* ===== Seções / Quadros ===== */
     .section{padding:var(--s6) 0; scroll-margin-top:var(--anchor-offset)}
     .section-box{
-      background:var(--card); border-radius:var(--radius); padding:var(--s4);
-      box-shadow:var(--shadow); color:var(--text);
+      background:var(--card); color:var(--text);
+      border-radius:var(--radius); padding:var(--s4); box-shadow:var(--shadow);
     }
     .grid-2{display:grid; grid-template-columns:1fr 1fr; gap:var(--s4); align-items:stretch}
     .grid-3{display:grid; grid-template-columns:repeat(3,1fr); gap:var(--s4)}
+    @media (max-width:900px){ .grid-2{grid-template-columns:1fr} .grid-3{grid-template-columns:1fr} }
 
-    /* Foto grande preenchendo o quadro (sem borda redonda) */
+    /* Foto grande preenchendo o quadro (Sobre mim) */
     .photo-box{padding:0; overflow:hidden}
     .photo-fill{width:100%; height:100%; min-height:360px; object-fit:cover; display:block; border-radius:var(--radius)}
-
-    .img-cover{width:100%; height:auto; border-radius:var(--radius); box-shadow:var(--shadow)}
+    @media (max-width:900px){ .photo-fill{min-height:280px} }
 
     /* Botões */
     .btn{
       display:inline-block; background:var(--gold); color:var(--card);
       border:none; border-radius:8px; padding:10px 20px; font-weight:700;
-      min-width:180px; text-align:center; transition:.3s;
-      text-decoration:none;
+      min-width:180px; text-align:center; transition:.3s; text-decoration:none;
     }
     .btn:hover{background:var(--mint); color:var(--brand)}
     .mini-cta{display:flex; gap:12px; flex-wrap:wrap; margin-top:.75rem; justify-content:center}
@@ -127,22 +147,12 @@
     .footer-content{display:grid; grid-template-columns:1fr auto; align-items:center; column-gap:1rem}
     .footer-text{text-align:center}
     .footer-logo{height:var(--logo-h-desktop); width:auto; display:block; filter:drop-shadow(0 4px 12px rgba(0,0,0,.15))}
+    @media (max-width:900px){ .footer-logo{height:var(--logo-h-mobile)} }
 
-    /* Responsivo */
-    @media (max-width:900px){
-      .brand-logo{height:var(--logo-h-mobile)}
-      .footer-logo{height:var(--logo-h-mobile)}
-
-      .menu-toggle:not(:checked) ~ nav{display:none}
-      .menu-toggle:checked ~ nav{display:block}
-
-      .grid-2{grid-template-columns:1fr}
-      .grid-3{grid-template-columns:1fr}
-      .photo-fill{min-height:280px}
-    }
-    @media (prefers-reduced-motion:reduce){
-      .brand-logo, nav a::after{transition:none}
-    }
+    /* Ajustes finos */
+    .muted{opacity:.9}
+    .grid-3 > .section-box{display:flex; flex-direction:column; height:100%}
+    .grid-3 > .section-box ul li{margin-bottom:.35rem}
   </style>
 </head>
 <body>
@@ -154,13 +164,16 @@
         <small>Psicóloga · CRP 04/30866</small>
       </div>
 
+      <!-- Mobile: botão/checkbox do menu -->
       <input id="menu" class="menu-toggle" type="checkbox" />
       <label for="menu" class="menu-btn" aria-label="Abrir menu">☰ Menu</label>
 
+      <!-- Logo à direita -->
       <div class="logo-wrap">
         <img src="Logomarca.png" alt="Logomarca Laura Sathler" class="brand-logo" onerror="this.style.display='none'">
       </div>
 
+      <!-- Navegação central -->
       <nav aria-label="principal">
         <ul>
           <li><a href="#psicoterapia">O que é Psicoterapia</a></li>
@@ -174,7 +187,7 @@
   </header>
 
   <main>
-    <!-- O que é Psicoterapia? (texto ESQ, imagem DIR) -->
+    <!-- ===== O que é Psicoterapia? (texto ESQ, imagem DIR) ===== -->
     <section id="psicoterapia" class="section">
       <div class="container grid-2">
         <div class="section-box">
@@ -188,13 +201,13 @@
       </div>
     </section>
 
-    <!-- Sobre mim (FOTO ESQ grande, TEXTO DIR) -->
+    <!-- ===== Sobre mim (FOTO ESQ grande preenchendo, TEXTO DIR) ===== -->
     <section id="sobre" class="section">
-      <div class="container grid-2">
-        <div class="section-box photo-box">
+      <div class="container grid-2 about">
+        <div class="section-box photo-box media">
           <img class="photo-fill" src="Laura.jpeg" alt="Foto de Laura Sathler" loading="lazy" decoding="async">
         </div>
-        <div class="section-box">
+        <div class="section-box about-text">
           <h2>Sobre mim</h2>
           <p>Sou <strong>Laura Sathler</strong>, psicóloga (CRP 04/30866), formada pela PUC Minas e com mais de 10 anos de experiência clínica. Minha trajetória é movida pelo desejo de estar com as pessoas em seus processos mais autênticos, oferecendo um espaço seguro e de confiança.</p>
           <p>Minha prática se baseia na abordagem <strong>humanista-existencial</strong>, que acredita na singularidade de cada ser humano e no poder do encontro verdadeiro. No consultório, valorizo o diálogo aberto, a escuta atenta e a presença genuína, porque acredito que é na relação que novas formas de viver e sentir podem florescer.</p>
@@ -204,7 +217,7 @@
       </div>
     </section>
 
-    <!-- Especialidades -->
+    <!-- ===== Especialidades ===== -->
     <section id="especialidades" class="section">
       <div class="container">
         <div class="section-box" style="text-align:center; margin-bottom:24px">
@@ -264,7 +277,7 @@
       </div>
     </section>
 
-    <!-- Quando procurar -->
+    <!-- ===== Quando procurar ===== -->
     <section id="quando" class="section">
       <div class="container">
         <div class="section-box">
@@ -281,7 +294,7 @@
       </div>
     </section>
 
-    <!-- Contato -->
+    <!-- ===== Contato ===== -->
     <section id="contato" class="section">
       <div class="container">
         <div class="section-box" style="text-align:center">
@@ -289,12 +302,15 @@
           <p>Estou à disposição para conversar e iniciar um processo terapêutico com você.</p>
 
           <div class="social" aria-label="Canais de contato">
+            <!-- WhatsApp -->
             <a href="https://wa.me/5531991593800" target="_blank" rel="noopener" aria-label="WhatsApp">
               <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 64 64"><circle cx="32" cy="32" r="32" fill="#25D366"/><path fill="#fff" d="M45.6 18.4A16.5 16.5 0 0 0 16.7 43.9l-1.1 6.9 7-1.1A16.5 16.5 0 0 0 45.6 18.4Zm-6 23.8a13.2 13.2 0 0 1-6.5 1.8h-.1a13 13 0 0 1-5.7-1.4l-.4-.2-4.2.7.7-4.1-.3-.4a13 13 0 1 1 16.5 3.6Z"/></svg>
             </a>
+            <!-- E-mail -->
             <a href="mailto:Laurasathler@yahoo.com.br" aria-label="E-mail">
               <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 64 64"><rect x="4" y="12" width="56" height="40" rx="8" fill="#4f7cff"/><path fill="#fff" d="M10 20l22 14L54 20v6L32 40 10 26z"/></svg>
             </a>
+            <!-- Instagram -->
             <a href="https://www.instagram.com/laurasathler_psi" target="_blank" rel="noopener" aria-label="Instagram">
               <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 64 64">
                 <defs>
@@ -315,7 +331,7 @@
     </section>
   </main>
 
-  <!-- Rodapé -->
+  <!-- ===== RODAPÉ ===== -->
   <footer>
     <div class="container footer-content">
       <div class="footer-text">© <span id="year"></span> Laura Sathler · Psicóloga · CRP 04/30866</div>
@@ -324,13 +340,16 @@
   </footer>
 
   <script>
+    // Ano dinâmico
     document.getElementById('year').textContent = new Date().getFullYear();
 
+    // Sombra do topo ao rolar (sem alterar altura -> evita “tremor”)
     const header = document.getElementById('topbar');
     function onScroll(){ header.classList.toggle('scrolled', window.scrollY > 10); }
     window.addEventListener('scroll', onScroll, {passive:true});
     window.addEventListener('load', onScroll);
 
+    // Offset das âncoras (hash) baseado na altura real do topo
     function setOffset(){
       const h = header.offsetHeight;
       document.documentElement.style.setProperty('--anchor-offset', h + 'px');
@@ -338,6 +357,7 @@
     window.addEventListener('load', setOffset);
     window.addEventListener('resize', setOffset);
 
+    // Fecha o menu (mobile) após clique e recalcula offset
     document.querySelectorAll('nav a').forEach(a=>{
       a.addEventListener('click',()=>{
         const cb=document.getElementById('menu');
